--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "MySpecialFont";
-  src: url("fonts/Kmin-Regular.otf") format("opentype");
+  src: url("fonts/Kminv2-Regular.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
 }
